--- a/VRChat/79/1095079.html
+++ b/VRChat/79/1095079.html
@@ -75,7 +75,7 @@
     <script src=
     "https://asset.booth.pm/assets/23586338c84e10d4269f.js" defer=
     "defer" nonce=
-    "N3dtQLgGfOWXkicCKs0rryO8NqQ4sUoxHqiO0KhVu7k="></script>
+    "7ZAaGq3agWpoiF1usF34bhcoLsumfJ5pEUAbccjkLE8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC花札システム","description":"VRCにアップした花札システムです。\nゲームワールド増えろ！\n単機能にまとめる(シャッフル機構だけとか)めんどくさいので、配布ダメそうなのを除いてそのままupした手抜きです。\n適当に使ってください。\n\n●以下の機能が含まれます。\n・こいこいの役/バカッ花の絵札点の計算シェーダー\n・シェーダーへカード48枚を見分けて値設定可能な VRCトリガー/アニメーション･アニメーターレイヤー･パラメータ･ステート設定/シャッフル機構\n・上記48枚見分けるやつは非常に改変しづらいので利用は覚悟すること(ちょっとだれかもっと賢い方法あったら教えて)\n・3D花札カード。それに使ってる、重なっても半透明特有の前後入れ替わりが起きずZバッファ計算するために、ワールド用にバカっぽい感じでやっつけた窓枠シェーダー\n・各場カメラの設定\n・寛永通宝と丁銀(ワンドロ)\n\n●以下の機能は含まれません\n・カード内の動物(アセットストアのものとかのため)\n・背景画像(あの金色屏風)\n・説明ボード画像\n・その他VRCSDKとか標準アセットとか系諸々","url":"https://booth.pm/ja/items/1095079","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1095079/fe460618-2685-4853-9bbb-501fb3072ba7_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N3dtQLgGfOWXkicCKs0rryO8NqQ4sUoxHqiO0KhVu7k="></script>
+    nonce="7ZAaGq3agWpoiF1usF34bhcoLsumfJ5pEUAbccjkLE8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -580,7 +580,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;},{&quot;label&quot;:&quot;COMITIA142&quot;,&quot;value&quot;:&quot;comitia142&quot;},{&quot;label&quot;:&quot;立体乱舞3&quot;,&quot;value&quot;:&quot;rittairanbu3&quot;}]"
+    "[{&quot;label&quot;:&quot;#エアブー230108&quot;,&quot;value&quot;:&quot;air-boo-0108&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪123&quot;,&quot;value&quot;:&quot;comiccity-osaka123&quot;},{&quot;label&quot;:&quot;コミックマーケット101&quot;,&quot;value&quot;:&quot;c101&quot;},{&quot;label&quot;:&quot;コスホリック34&quot;,&quot;value&quot;:&quot;cosholic34&quot;},{&quot;label&quot;:&quot;COMIC CITY SPARK 17&quot;,&quot;value&quot;:&quot;comiccity-spark17&quot;},{&quot;label&quot;:&quot;ドールズ・パーティー48&quot;,&quot;value&quot;:&quot;dollsparty48&quot;},{&quot;label&quot;:&quot;1218#エアブーSPARK+DRF2022&quot;,&quot;value&quot;:&quot;air-boo-1218&quot;},{&quot;label&quot;:&quot;Dozen Rose Fes.2022&quot;,&quot;value&quot;:&quot;dozenrosefes2022&quot;},{&quot;label&quot;:&quot;I・Doll VOL.66&quot;,&quot;value&quot;:&quot;i-doll66&quot;},{&quot;label&quot;:&quot;バーチャルマーケット2022 Winter Next Journey&quot;,&quot;value&quot;:&quot;virtualmarket2022winter&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
